Fixed--image stretch on mobile v4

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,7 +35,8 @@ body {
 
 /* IMAGES */
 .img--camp {
+    display: inline;
+    width: 100%;
+    max-width: 400px;
     height: auto;
-    max-width: 100%;
-    width: auto;
 }
